<resources>
    <string name="app_name">Buildingding</string>
    <string name="textview_start">Choose a starting point</string>
    <string name="textview_end">Choose an endpoint</string>
    <string name="button_start">Start</string>
    <string name="welcome_text">BuildingDing</string>
    <string name="button_navigation_text">NAVIGATION</string>
    <string name="ucll_logo_description">UCLL Logo</string>
    <string name="button_settings_text">SETTINGS</string>
    <string name="button_about_text">ABOUT</string>
    <string name="start_position_text">STARTPOSITION</string>
    <string name="end_position_text">ENDPOSITION</string>
    <string name="title_about">About</string>
    <string name="title_settings">Appinstellingen</string>
    <string name="title_navigation">Navigatie</string>
    <string name="title_text_navigation">Textnavigation</string>
    <string name="title_2D_navigation">"2D navigation"</string>
    <string name="title_choose_locations">Choose location</string>
    <string name="settings_option_language">Language</string>
    <string name="settings_option_start_choice">StartChoice</string>
    <string name="settings_option_route_display">Route display</string>
    <string name="direction_first">Go to the </string>
    <string name="direction_second">Then, walk on to the </string>
    <string name="direction_third">Now go to the </string>
    <string name="direction_fourth">Now, continue until the </string>
    <string name="direction_fifth">Stroll towards the </string>
    <string name="direction_sixth">Next, tread to the </string>
    <string name="splash_screen_alt_text">Splash screen for the app</string>
    <string name="about_application_text">This application helps\nto guide you around\nCampus Proximus</string>
    <string name="about_opdracht_text">graduation project\nUCLL\n2020</string>
    <string name="about_team_text">Hamid Khodayari\nThomas Nelen\nJaron Trossaert\nJohan Molenberghs</string>
    <string name="show_map">Show map</string>
</resources>